# aes_attack

./: .gitignore
AESgpu/: .clang-format  CMakeLists.txt
AESgpu/include/: aes_core.h  common.h
AESgpu/src/: aes_generate.cu  aes_generate_trident.cu  aes_main.cu  aes_test.cu
attack_implementation/: calcRequests.py  cipher.txt
cache_test/: Makefile  crunch  crunch.cpp  main  main.cu  plot.py  table128  table128_hm  table128_median  table16  table16_hm  table16_median  table256  table256_hm  table256_median  table32  table32_hm  table32_median  table512  table512_hm  table512_median  table64  table64_hm  table64_median  test.sh
correlation_attack/: calcRequests.py  extractKey.sh  first_run.sh
custom_aes/: .clang-format  CMakeLists.txt  Makefile
custom_aes/include/: aes_tables.h
custom_aes/src/: aes_test.cu
trident_attack/: cipher.txt  classifier.py
